sin node modules

--- a/equim/views/index.ejs
+++ b/equim/views/index.ejs
@@ -59,45 +59,56 @@
 </section>
 
 <!---CATEGORIAS-->
-<section class="container-fluid">
+<section class="container py-5">
   <div class="row productos">
-  <div class= col-12><h2>
-    CATEGORIAS
+  <div class="col-12"><h2>
+    Productos Mas Vendidos
   </h2></div>
   <div class="col-12 col-md-6 col-md-3">
     <div class="contenido">
-     <img src="images/baño.jpg"  alt="">
+     <img src="images/lavandina-doble-1lt.jpg " width="80%" height="80%" alt="">
     <article>
-      <p>Productos para limpieza y cuidado de baño.</p>
+      <h3>$6.770</h3>
+       <span>40% OFF</span>
+               <p>Cafetera Moulinex Dolce Gusto Lorem ipsum dolor sit  amet.</p>
+      <i class="fas fa-truck"></i>
     </article>
   </div>
-  </div>
-  <div class="col-12 col-md-6 col-md-3">
+            </div>
+            <div class="col-12 col-md-6 col-md-3">        
   <div class="contenido">
-    <img src="images/cocina.jpg"  alt="">
+    <img src="images/alcohol-4lts.jpg"width="80%" height="80%" alt="">
    <article>
-      <p>Productos para limpieza y cuidado de cocina.</p>
-    </article>
+     <h3>$6.770</h3>
+     <span>40% OFF</span>
+              <p>Cafetera Moulinex Dolce Gusto Lorem ipsum dolor sit amet.</p>
+     <i class="fas fa-truck"></i>
+             </article>
+ </div>
+            </div>
+            <div class="col-12 col-md-6 col-md-3">          
+ <div class="contenido">
+  <img src="images/alcohol-un-litro.jpg "width="80%" height="80%" alt="">
+ <article>
+   <h3>$6.770</h3>
+   <span>40% OFF</span>
+   <p>Cafetera Moulinex Dolce Gusto Lorem ipsum dolor sit amet.</p>
+   <i class="fas fa-truck"></i>
+ </article>
+</div>
+</div>
+<div class="col-12 col-md-6 col-md-3">          
+  <div class="contenido">
+   <img src="images/alcohol-4lts.jpg "width="80%" height="80%" alt="">
+  <article>
+    <h3>$6.770</h3>
+    <span>40% OFF</span>
+    <p>Cafetera Moulinex Dolce Gusto Lorem ipsum dolor sit amet.</p>
+    <i class="fas fa-truck"></i>
+  </article>
+ </div>
  </div>
   </div>
-  <div class="col-12 col-md-6 col-md-3">
- <div class="contenido">
-  <img src="images/piso.jpg " alt="">
- <article>
-   <p>Productos para limpieza y cuidado de piso.</p>
-  </article>
-</div>
-</div>
-<div class="col-12 col-md-6 col-md-3">
-  <div class="contenido">
-   <img src="images/piso.jpg " alt="">
-  <article>
-    <p>Productos para limpieza y cuidado de piso.</p>
-   </article>
- </div>
- </div>
-
- </div>
 </section>
 
 
