--- a/equim/public/stylesheets/style.css
+++ b/equim/public/stylesheets/style.css
@@ -1,31 +1,99 @@
-body{
-  background-color: white;
-}
-header{
-  background-color: wheat
-  
-}
-.container-fluid{
-  padding-top: 5%;
-  
-}
-header .col-1{
-  padding: 3%;
-   }
-header .col-1{
-padding: 1% 1%;
 
+@import url('https://fonts.google.com/specimen/Archivo+Narrow');
+
+:root{
+  --color-celesteClarito:#E4F9F5;
+  --color-turquesaClaro:#30e3ca;
+  --color-turquesaOscuro:#11999e;
+  --color-gris:#40514e;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+body {
+  font-family: Narrow;
+  font-weight: 300;
+}
+/* HEADER*/
+header {
+  background-color:var(--color-turquesaClaro);
+    padding: 20px 0px;
+}
+header a:hover{
+  text-decoration: none;
+  color: white;
+}
+header ul li{
+  padding: 10px;
+  margin-left: 40px;
+  display: flex;
+  
+}
+h2{
+  text-align: center;
+  margin: 0 auto;
+  padding-bottom: 2%;
+  border: var(--color-turquesaClaro) 3px outset
+}
+p{
+  text-align: center;
+  font-size: 25px;
+}
+h3{
+  text-align: center;
+  font-size: 25px;
+}
+
+.container-fluid {
+  padding-top: 3%;
+}
+header .col-1 {
+  padding: 1% 4% 1% 4%;
 }
 
 header .container-fluid .row .col-4 {
   padding-left: 5%;
-  padding-bottom: 0%;
-  padding-top: 0%;
-  }
-  ul{
-    color: black;
-    list-style: none;
-    background-color: blanchedalmond;
-   
-  }
+  padding-bottom: 1%;
+}
+
+
+header ul {
+  color: blue;
+  list-style: none;
+  background-color: blanchedalmond;
+  padding: 0% 15% 0% 15%;
+  margin-top: 1%;
+}
+
+
+section .contenido {
+  margin-bottom: 30px;
+  border-radius: 5px;
+  padding: 5px;
+  text-align: center;
+  border: var(--color-turquesaClaro) 3px outset
+}
+
+/* footer */
+footer{
+  text-align: center;
+  background-color: var(--color-gris);
+}
+
+.footer ul{
  
+  display: block;
+  padding: 40px 0;
+}
+
+footer li{
+  display: block;
+  padding: 10px 10px;
+}
+
+footer a{
+  text-transform: capitalize;
+}
