--- a/equim/views/index.ejs
+++ b/equim/views/index.ejs
@@ -1,123 +1,326 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
 
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  
-
-</head>
-<body>
-<header>
-   <div class="container-fluid">
-     <div class="row">
-       <div class="col-4">
-       <a href=""><img src="/images/logo-equim.svg" alt=""  width="100%" height="80%"></a>  
-       </div>
-     
-       <div class="col-6">
-          <div class="input-group">
-        <input class="form-control my-0 py-1 grey-border" type="text" placeholder="Buscar" aria-label="Search">
-        <div class="input-group-append">
-          <span class="input-group-text red lighten-3" id="basic-text1"><i class="fas fa-search text-grey"
-              aria-hidden="true"></i></span>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="container-fluid">
+        <div class="row">
+          <!--Logo-->
+          <div class="col-4 logo">
+            <a href=""
+              ><img
+                src="/images/logo-equim.svg"
+                alt=""
+                width= "100%";
+                height= "100%";
+            /></a>
+          </div>
+         <!--Buscador-->
+          <div class="col-6">
+            <div class="input-group">
+              <input
+                class="form-control my-0 py-1 grey-border"
+                type="text"
+                placeholder="Buscar"
+                aria-label="Search"
+              />
+              <div class="input-group-append">
+                <span class="input-group-text red lighten-3" id="basic-text1"
+                  ><i class="fas fa-search text-grey" aria-hidden="true"></i
+                ></span>
+              </div>
+            </div>
+          </div>
+          <!--icono carrito-->
+          <div class="col-1">
+            <a href="">
+              <i
+                class="fa fa-shopping-cart"
+                style="color: #00afef;"
+                aria-hidden="true"
+              ></i>
+            </a>
+          </div>
+          <!--icono usuario-->
+          <div class="col-1">
+            <a href="">
+              <i
+                class="fa fa-user"
+                style="color: #00afef;"
+                aria-hidden="true"
+              ></i>
+            </a>
+          </div>
         </div>
-     </div>
-      </div>
-     <div class = "col-1">
-     <a href="">
-      <i class="fa fa-shopping-cart" style="color:#00AFEF" aria-hidden="true"></i> </a>
-    </div>
-    <div class= "col-1">
-    <a href="">
-      <i class="fa fa-user" style="color:#00AFEF" aria-hidden="true"></i>
-      </a>
-    </div>
-     </div>
-     <nav class="navbar-expand-md">
-      <button class="navbar-toggler burger" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
-      <div class="container">
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class= "row">
-          <li class="col-3"><a href="">NOSOTROS</a></li>
-          <li class="col-3"><a href="">COMO COMPRAR</a></li>
-          <li class="col-3"><a href="">NUESTRAS SUCURSALES</a></li>
-          <li class="col-3"><a href="">CONTACTO</a></li>
-        </ul>
-      </div>
-      </div>
-    </nav>
-    </div>
-
-</header>
-<section class="banner">
-        <img src="images/img-home-banner.jpg " width= "100%"alt=" ">
-</section>
-
-<!---CATEGORIAS-->
-<section class="container py-5">
-  <div class="row productos">
-  <div class="col-12"><h2>
-    Productos Mas Vendidos
-  </h2></div>
-  <div class="col-12 col-md-6 col-md-3">
-    <div class="contenido">
-     <img src="images/lavandina-doble-1lt.jpg " width="80%" height="80%" alt="">
-    <article>
-      <h3>$6.770</h3>
-       <span>40% OFF</span>
-               <p>Cafetera Moulinex Dolce Gusto Lorem ipsum dolor sit  amet.</p>
-      <i class="fas fa-truck"></i>
-    </article>
-  </div>
+        <!--hamburguesa-->
+        <nav class="navbar-expand-md">
+          <button
+            class="navbar-toggler burger"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
+            <i class="fas fa-bars"></i>
+          </button>
+          <!---categorias-->
+          
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="menu navbar-nav mr-auto">
+                <li class="col-12 col-md-3"><a href="">PRODUCTOS PARA BAÑO</a></li>
+                <li class="col-12 col-md-3"><a href="">PRODUCTOS PARA COCINA</a></li>
+                <li class="col-12 col-md-3"><a href="">PRODUCTOS PARA PISO</a></li>
+                <li class="col-12 col-md-3"><a href="">PRODUCTOS VARIOS</a></li>
+              </ul>
             </div>
-            <div class="col-12 col-md-6 col-md-3">        
-  <div class="contenido">
-    <img src="images/alcohol-4lts.jpg"width="80%" height="80%" alt="">
-   <article>
-     <h3>$6.770</h3>
-     <span>40% OFF</span>
-              <p>Cafetera Moulinex Dolce Gusto Lorem ipsum dolor sit amet.</p>
-     <i class="fas fa-truck"></i>
-             </article>
- </div>
+        </nav>
+      </div>
+    </header>
+    <section class="banner">
+      <img src="images/img-home-banner.jpg " width="100%" alt=" " />
+    </section>
+
+    <!---SECCION MAS VENDIDOS-->
+    <section class="container py-5">
+      <div class="row productos">
+        <div class="col-12">
+          <h2>
+            Productos Mas Vendidos
+          </h2>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="contenido">
+            <img
+              src="images/lavandina-doble-1lt.jpg "
+              width="80%"
+              height="80%"
+              alt=""
+            />
+            <article>
+              <h3>$6.770</h3>
+              <p>Lavandina x 1lt.</p>
+              <a href=""
+                ><i
+                  class="fa fa-shopping-cart"
+                  style="color: #00afef;"
+                  aria-hidden="true"
+                ></i>
+              </a>
+            </article>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="contenido">
+            <img
+              src="images/alcohol-4lts.jpg"
+              width="80%"
+              height="80%"
+              alt=""
+            />
+            <article>
+              <h3>$6.770</h3>
+              <p>Alcohol x 4lts.</p>
+              <a href="">
+                <i
+                  class="fa fa-shopping-cart"
+                  style="color: #00afef;"
+                  aria-hidden="true"
+                ></i>
+              </a>
+            </article>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="contenido">
+            <img
+              src="images/alcohol-un-litro.jpg "
+              width="80%"
+              height="80%"
+              alt=""
+            />
+            <article>
+              <h3>$6.770</h3>
+              <p>Alcohol x 1lt.</p>
+              <a href=""
+                ><i
+                  class="fa fa-shopping-cart"
+                  style="color: #00afef;"
+                  aria-hidden="true"
+                ></i
+              ></a>
+            </article>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="contenido">
+            <a href=""
+              ><img
+                src="images/lavandina-cuatro-litros.jpg "
+                width="80%"
+                height="80%"
+                alt=""
+            /></a>
+            <article>
+              <h3>$6.770</h3>
+              <p>Lavandina x 4lts.</p>
+              <a href=""
+                ><i
+                  class="fa fa-shopping-cart"
+                  style="color: #00afef;"
+                  aria-hidden="true"
+                ></i
+              ></a>
+            </article>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--SECCION OFERTAS-->
+    <section class="container py-5">
+      <div class="row productos">
+        <div class="col-12">
+          <h2>
+            Productos Mas Vendidos
+          </h2>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="contenido">
+            <img
+              src="images/lavandina-doble-1lt.jpg "
+              width="80%"
+              height="80%"
+              alt=""
+            />
+            <article>
+              <h3>$6.770</h3>
+              <p>Lavandina x 1lt.</p>
+              <a href=""
+                ><i
+                  class="fa fa-shopping-cart"
+                  style="color: #00afef;"
+                  aria-hidden="true"
+                ></i>
+              </a>
+            </article>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="contenido">
+            <img
+              src="images/alcohol-4lts.jpg"
+              width="80%"
+              height="80%"
+              alt=""
+            />
+            <article>
+              <h3>$6.770</h3>
+              <p>Alcohol x 4lts.</p>
+              <a href="">
+                <i
+                  class="fa fa-shopping-cart"
+                  style="color: #00afef;"
+                  aria-hidden="true"
+                ></i>
+              </a>
+            </article>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="contenido">
+            <img
+              src="images/alcohol-un-litro.jpg "
+              width="80%"
+              height="80%"
+              alt=""
+            />
+            <article>
+              <h3>$6.770</h3>
+              <p>Alcohol x 1lt.</p>
+              <a href=""
+                ><i
+                  class="fa fa-shopping-cart"
+                  style="color: #00afef;"
+                  aria-hidden="true"
+                ></i
+              ></a>
+            </article>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="contenido">
+            <a href=""
+              ><img
+                src="images/lavandina-cuatro-litros.jpg "
+                width="80%"
+                height="80%"
+                alt=""
+            /></a>
+            <article>
+              <h3>$6.770</h3>
+              <p>Lavandina x 4lts.</p>
+              <a href=""
+                ><i
+                  class="fa fa-shopping-cart"
+                  style="color: #00afef;"
+                  aria-hidden="true"
+                ></i
+              ></a>
+            </article>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--FOOTER-->
+    <footer class="container-fluid">
+      <div class="row">
+        <div class="col-12">
+          <ul class="segundo">
+            <div class="">
+              <li><a href="#">CONTACTO</a></li>
             </div>
-            <div class="col-12 col-md-6 col-md-3">          
- <div class="contenido">
-  <img src="images/alcohol-un-litro.jpg "width="80%" height="80%" alt="">
- <article>
-   <h3>$6.770</h3>
-   <span>40% OFF</span>
-   <p>Cafetera Moulinex Dolce Gusto Lorem ipsum dolor sit amet.</p>
-   <i class="fas fa-truck"></i>
- </article>
-</div>
-</div>
-<div class="col-12 col-md-6 col-md-3">          
-  <div class="contenido">
-   <img src="images/alcohol-4lts.jpg "width="80%" height="80%" alt="">
-  <article>
-    <h3>$6.770</h3>
-    <span>40% OFF</span>
-    <p>Cafetera Moulinex Dolce Gusto Lorem ipsum dolor sit amet.</p>
-    <i class="fas fa-truck"></i>
-  </article>
- </div>
- </div>
-  </div>
-</section>
-
-
-
-
-
-  
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-</body>
+            <div>
+              <li><a href="#">SUCURSALES</a></li>
+            </div>
+            <div>
+              <li><a href="#">REDES SOCIALES</a></li>
+            </div>
+            <div>
+              <li><a href="#">SOBRE NOSOTROS</a></li>
+            </div>
+        </div>
+      </div>
+    </footer>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
