--- a/equim/views/index.ejs
+++ b/equim/views/index.ejs
@@ -1,3 +1,6 @@
+
+
+
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -14,25 +17,25 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-
-    <link rel="stylesheet" href="/stylesheets/style.css" />
+          <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
+     <!--header-->
     <header>
       <div class="container-fluid">
         <div class="row">
-          <!--Logo-->
+           <!--logo-->
           <div class="col-4 logo">
             <a href=""
               ><img
                 src="/images/logo-equim.svg"
                 alt=""
-                width= "100%";
-                height= "100%";
+                width= "100%"
+                height= "100%"
             /></a>
           </div>
-         <!--Buscador-->
-          <div class="col-6">
+           <!--buscador-->
+         <div class="col-6">
             <div class="input-group">
               <input
                 class="form-control my-0 py-1 grey-border"
@@ -47,19 +50,21 @@
               </div>
             </div>
           </div>
-          <!--icono carrito-->
+          
+
+           <!--icono carrito de compras-->
           <div class="col-1">
             <a href="">
               <i
                 class="fa fa-shopping-cart"
                 style="color: #00afef;"
                 aria-hidden="true"
-              ></i>
+            ></i>
             </a>
           </div>
           <!--icono usuario-->
           <div class="col-1">
-            <a href="">
+            <a href="registro.ejs">
               <i
                 class="fa fa-user"
                 style="color: #00afef;"
@@ -68,8 +73,8 @@
             </a>
           </div>
         </div>
-        <!--hamburguesa-->
-        <nav class="navbar-expand-md">
+          <!--hamburgesa-->
+       <nav class="navbar-expand-md">
           <button
             class="navbar-toggler burger"
             type="button"
@@ -80,8 +85,7 @@
             aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
           </button>
-          <!---categorias-->
-          
+          <!--menu-->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="menu navbar-nav mr-auto">
                 <li class="col-12 col-md-3"><a href="">PRODUCTOS PARA BAÑO</a></li>
@@ -94,7 +98,7 @@
       </div>
     </header>
     <section class="banner">
-      <img src="images/img-home-banner.jpg " width="100%" alt=" " />
+      <img src="images/baner-equim.jpg " width="100%" height="100%" alt=" " />
     </section>
 
     <!---SECCION MAS VENDIDOS-->
