--- a/productAdd-style.css
+++ b/productAdd-style.css
@@ -2,7 +2,7 @@
 IMPORTO LA FUENTE TIPOGRAFICA
 */
 
-@import ulr('https://fonts.google.com/specimen/Archivo+Narrow');
+@import url('https://fonts.google.com/specimen/Archivo+Narrow');
 
 
 /*
