subo ruta de registro

--- a/equim/views/index.ejs
+++ b/equim/views/index.ejs
@@ -25,7 +25,7 @@
       <div class="container-fluid">
         <div class="row">
            <!--logo-->
-          <div class="col-4 logo">
+          <div class="col-4">
             <a href=""
               ><img
                 src="/images/logo-equim.svg"
@@ -64,7 +64,7 @@
           </div>
           <!--icono usuario-->
           <div class="col-1">
-            <a href="registro.ejs">
+            <a href="/users/registro">
               <i
                 class="fa fa-user"
                 style="color: #00afef;"
