--- a/equim/views/index.ejs
+++ b/equim/views/index.ejs
@@ -1,102 +1,14 @@
-
-
-
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
-          <link rel="stylesheet" href="/stylesheets/style.css" />
-  </head>
-  <body>
-     <!--header-->
-    <header>
-      <div class="container-fluid">
-        <div class="row">
-           <!--logo-->
-          <div class="col-4">
-            <a href=""
-              ><img
-                src="/images/logo-equim.svg"
-                alt=""
-                width= "100%"
-                height= "100%"
-            /></a>
-          </div>
-           <!--buscador-->
-         <div class="col-6">
-            <div class="input-group">
-              <input
-                class="form-control my-0 py-1 grey-border"
-                type="text"
-                placeholder="Buscar"
-                aria-label="Search"
-              />
-              <div class="input-group-append">
-                <span class="input-group-text red lighten-3" id="basic-text1"
-                  ><i class="fas fa-search text-grey" aria-hidden="true"></i
-                ></span>
-              </div>
-            </div>
-          </div>
-          
+      <!--header-->
+  <%- include('partials/head') %> 
 
-           <!--icono carrito de compras-->
-          <div class="col-1">
-            <a href="">
-              <i
-                class="fa fa-shopping-cart"
-                style="color: #00afef;"
-                aria-hidden="true"
-            ></i>
-            </a>
-          </div>
-          <!--icono usuario-->
-          <div class="col-1">
-            <a href="/users/registro">
-              <i
-                class="fa fa-user"
-                style="color: #00afef;"
-                aria-hidden="true"
-              ></i>
-            </a>
-          </div>
-        </div>
-          <!--hamburgesa-->
-       <nav class="navbar-expand-md">
-          <button
-            class="navbar-toggler burger"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation">
-            <i class="fas fa-bars"></i>
-          </button>
-          <!--menu-->
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="menu navbar-nav mr-auto">
-                <li class="col-12 col-md-3"><a href="">PRODUCTOS PARA BAÑO</a></li>
-                <li class="col-12 col-md-3"><a href="">PRODUCTOS PARA COCINA</a></li>
-                <li class="col-12 col-md-3"><a href="">PRODUCTOS PARA PISO</a></li>
-                <li class="col-12 col-md-3"><a href="">PRODUCTOS VARIOS</a></li>
-              </ul>
-            </div>
-        </nav>
-      </div>
-    </header>
+  <body>
+
+         <!--header-->
+     <%- include('partials/header') %>
+
+     <!---SECCION MAS VENDIDOS-->
     <section class="banner">
       <img src="images/baner-equim.jpg " width="100%" height="100%" alt=" " />
     </section>
@@ -292,25 +204,7 @@
       </div>
     </section>
     <!--FOOTER-->
-    <footer class="container-fluid">
-      <div class="row">
-        <div class="col-12">
-          <ul class="segundo">
-            <div class="">
-              <li><a href="#">CONTACTO</a></li>
-            </div>
-            <div>
-              <li><a href="#">SUCURSALES</a></li>
-            </div>
-            <div>
-              <li><a href="#">REDES SOCIALES</a></li>
-            </div>
-            <div>
-              <li><a href="#">SOBRE NOSOTROS</a></li>
-            </div>
-        </div>
-      </div>
-    </footer>
+   
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -326,5 +220,9 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
+
+    <!----Footer-->
+    <%- include('partials/footer') %>
+
   </body>
 </html>
