--- a/equim/views/registro.ejs
+++ b/equim/views/registro.ejs
@@ -13,7 +13,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-4">
-          <a href=""><img src="/images/logo.svg" alt=""  width="100%" height="100%"></a>  
+          <a href=""><img src="/images/logo-equim.svg" alt=""  width="100%" height="100%"></a>  
           </div>
         
           <div class="col-6">
