--- a/equim/views/registro.ejs
+++ b/equim/views/registro.ejs
@@ -1,56 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="/stylesheets/style.css">
-  </head>
+  <%- include('partials/head') %> 
   <body>
-    <header>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-4">
-          <a href=""><img src="/images/logo-equim.svg" alt=""  width="100%" height="100%"></a>  
-          </div>
-        
-          <div class="col-6">
-             <div class="input-group">
-           <input class="form-control my-0 py-1 grey-border" type="text" placeholder="Buscar" aria-label="Search">
-           <div class="input-group-append">
-             <span class="input-group-text red lighten-3" id="basic-text1"><i class="fas fa-search text-grey"
-                 aria-hidden="true"></i></span>
-           </div>
-        </div>
-         </div>
-        <div class = "col-1">
-        <a href="">
-         <i class="fa fa-shopping-cart" style="color:#00AFEF" aria-hidden="true"></i> </a>
-       </div>
-       <div class= "col-1">
-       <a href="">
-         <i class="fa fa-user" style="color:#00AFEF" aria-hidden="true"></i>
-         </a>
-       </div>
-        </div>
-        <nav class="navbar-expand-md">
-         <button class="navbar-toggler burger" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
-         <div class="container">
-           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-         <ul class= "row">
-             <li class="col-3"><a href="">NOSOTROS</a></li>
-             <li class="col-3"><a href="">COMO COMPRAR</a></li>
-             <li class="col-3"><a href="">NUESTRAS SUCURSALES</a></li>
-             <li class="col-3"><a href="">CONTACTO</a></li>
-           </ul>
-         </div>
-         </div>
-       </nav>
-       </div>
-   
-   </header>
+    <%- include('partials/header') %>
 
     <div class="container-fluid">
      <div class="row"> 
@@ -95,14 +47,10 @@
             <label for="inputEmail4">Teléfono</label>
             <input type="email" class="form-control" id="inputEmail4">
           </div>
-        
-        
-         
         <button type="submit" class="btn btn-primary">Enviar</button>
       </form>
      </div>
     </div>
-
 
     <div class="container">
       <div class="row">
@@ -132,34 +80,8 @@
 
     </div>
   
-    
-   <!--EMPIEZA EL FOOTER-->
-    <footer class="container-fluid">
-      <div class="row">
-        <div class="col-12 col-md-12">
-          <ul class="">
-            <div class="">
-              <li><a href="#">CONTACTO</a></li>
-            </div>
-            <div>
-              <li><a href="#">SUCURSALES</a></li>
-            </div>
-            <div>
-              <li><a href="#">REDES SOCIALES</a></li>
-            </div>
-            <div>
-              <li><a href="#">SOBRE NOSOTROS</a></li>
-            </div>
-        </div>
-      </div>
-    </footer>
-    <!--TERMINA EL FOOTER-->
-  
-
-  
-     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+     <!--EMPIEZA EL FOOTER-->
+   <%- include('partials/footer') %>
        
 </body>
 </html>
