archvos de base de datos- registro linkeado a index

--- a/equim/views/partials/header.ejs
+++ b/equim/views/partials/header.ejs
@@ -6,7 +6,7 @@
       <div class="row">
          <!--logo-->
         <div class="col-4">
-          <a href=""
+          <a href="/"
             ><img
               src="/images/logo-equim.svg"
               alt=""
