--- a/equim/views/index.ejs
+++ b/equim/views/index.ejs
@@ -8,12 +8,12 @@
          <!--header-->
      <%- include('partials/header') %>
 
-     <!---SECCION MAS VENDIDOS-->
+     <!--SECCION MAS VENDIDOS-->
     <section class="banner">
       <img src="images/baner-equim.jpg " width="100%" height="100%" alt=" " />
     </section>
 
-    <!---SECCION MAS VENDIDOS-->
+    <!--SECCION MAS VENDIDOS-->
     <section class="container py-5">
       <div class="row productos">
         <div class="col-12">
