--- a/equim/views/registro.ejs
+++ b/equim/views/registro.ejs
@@ -3,74 +3,26 @@
   <%- include('partials/head') %> 
   <body>
     <%- include('partials/header') %>
-
-    <div class="container-fluid">
-     <div class="row"> 
-       <form>
-       <div class="col-12">
-         <h1> Registrate</h1>
-       </div> 
-       <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="inputEmail4">Email</label>
-          <input type="email" class="form-control" id="inputEmail4">
-        </div>
-        <div class="form-group col-md-6">
-          <label for="inputPassword4">Contraseña</label>
-          <input type="password" class="form-control" id="inputPassword4" >
-        </div>
-      
-      
-                <div class="form-group col-md-6">
-            <label for="inputEmail4">Nombre</label>
-            <input type="email" class="form-control" id="inputEmail4">
-          </div>
-          <div class="form-group col-md-6">
-            <label for="inputEmail4">Apellido</label>
-            <input type="email" class="form-control" id="inputEmail4">
-          </div>
-        
-        
-          <div class="form-group col-md-6">
-            <label for="inputEmail4">Dirección</label>
-            <input type="email" class="form-control" id="inputEmail4">
-          </div>
-          <div class="form-group col-md-6">
-            <label for="inputEmail4">Provincia</label>
-            <input type="email" class="form-control" id="inputEmail4">
-          </div>
-          <div class="form-group col-md-6">
-            <label for="inputEmail4">Código Postal</label>
-            <input type="email" class="form-control" id="inputEmail4">
-          </div>
-          <div class="form-group col-md-6">
-            <label for="inputEmail4">Teléfono</label>
-            <input type="email" class="form-control" id="inputEmail4">
-          </div>
-        <button type="submit" class="btn btn-primary">Enviar</button>
-      </form>
-     </div>
-    </div>
-
-    <div class="container">
+    <!--LOGIN-->
+    <div class="container py-5">
       <div class="row">
         <div class="col-12">
-          <div>
+          <div class>
           <section>
             <h2> Ingresar</h2>
        
       <div class="form-row">
        <div class="form-group col-md-6">
-         <label for="inputEmail4">Email</label>
-         <input type="email" class="form-control" id="inputEmail4">
+         <label for="inputEmail">Email</label>
+         <input type="email" class="form-control" id="inputEmail">
        </div>
        
          <div class="form-group col-md-6">
-          <label for="inputPassword4">Contraseña</label>
-          <input type="password" class="form-control" id="inputPassword4" >
+          <label for="inputPassword">Contraseña</label>
+          <input type="password" class="form-control" id="inputPassword" >
         </div>
         
-           <button type="submit" class="btn btn-primary">Enviar</button>
+           <button type="submit" class="btn btn-primary">Ingresar</button>
        </div>
           </section>
           </div>
@@ -79,6 +31,63 @@
       </div>
 
     </div>
+
+    <!--REGISTRO-->
+    <div class="container py-5">
+      <div class="row">
+        <div class="col-12">
+          <div class>
+          <section>
+            <h2>Registrate</h2>
+       <form action="/users/registro" method="post">
+      <div class="form-row">
+       <div class="form-group col-md-6">
+         <label for="email">Email</label>
+         <input type="email" class="form-control" name="email">
+       </div>
+        <div class="form-group col-md-6">
+          <label for="password">Contraseña</label>
+          <input type="password" class="form-control" name="password" >
+        </div>
+        <div class="form-group col-md-6">
+          <label for="name">Nombre</label>
+          <input type="text" class="form-control" name="name">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="lastName">Apellido</label>
+          <input type="text" class="form-control" name="lastName" >
+        </div>
+        <div class="form-group col-md-6">
+          <label for="address">Direccion</label>
+          <input type="text" class="form-control" name="address">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="state">Provincia</label>
+          <input type="text" class="form-control" name="state" >
+        </div>
+        <div class="form-group col-md-6">
+          <label for="postalCode">Codigo Postal</label>
+          <input type="number" class="form-control" name="postalCode">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="telephone">Telefono</label>
+          <input type="number" class="form-control" name="telephone" >
+        </div>
+           <button type="submit" class="btn btn-primary">Ingresar</button>
+
+      </div>
+      
+    </form>
+      </section>
+          </div>
+          
+        </div>
+      </div>
+
+    </div>
+
+
+
   
      <!--EMPIEZA EL FOOTER-->
    <%- include('partials/footer') %>
