subo index linkeado con carrito

--- a/equim/views/partials/header.ejs
+++ b/equim/views/partials/header.ejs
@@ -34,7 +34,7 @@
 
          <!--icono carrito de compras-->
         <div class="col-1">
-          <a href="">
+          <a href="/users/carrito">
             <i
               class="fa fa-shopping-cart"
               style="color: #00afef;"
