Subiendo los nuevos cambios

--- a/equim/views/productAdd.ejs
+++ b/equim/views/productAdd.ejs
@@ -15,21 +15,21 @@
       </div>
       <div class="col-12">
         <article>
-          <form class="col-12 col-md-12" action="">
+          <form class="col-12 col-md-12" action="/products/agregarProductos" method="POST">
             <p>
               <label for="nombre">Nombre:</label>
-              <input type="text" name="name" id=""
+              <input type="text" name="name" id="">
             </p>
             <p>
               <label for="categoria">Categoria:</label>
-              <input type="text" name="category" id=""
+              <input type="text" name="category" id="">
             </p>
             <p>
               <label for="precio">Precio:</label>
-              <input type="text" name="price" id=""
+              <input type="text" name="price" id="">
             </p>
             <p>
-              <label for="">Descripción del Producto</label>
+              <label for="">Descripción del Producto:</label>
             </p>
             <textarea cols="" rows=""></textarea>
       
