--- a/equim/views/compra.ejs
+++ b/equim/views/compra.ejs
@@ -1,44 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/estilo.css">
-    <script src="js/popper.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    
-    <link rel="stylesheet" href="css/sweetalert2.min.css">
-
-    <title>mi Carrito </title>
-    
-</head>
+<%- include('partials/head') %> >
 
 <body>
-    <header>
-        <div class="container">
-            <div class="row justify-content-between mb-5">
-                <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-                    <div class="col-sm-12 col-md-3 col-lg-3">
-                        <a href=""><img height=50px src="../public/images/logo-equim.svg" alt=" "></a>
-                    </div>
-                    <ul class="usuario navbar-nav">
-                        <li class="col-sm-12 col-md-2 col-lg-3 "><a href="">NOSOTROS</a></li>
-                        <li class="col-sm-12 col-md-2 col-lg-3"><a href="">COMO COMPRAR</a></li>
-                        <li class="col-sm-12 col-md-2 col-lg-3"><a href="">NUESTRAS SUCURSALES</a></li>
-                        <li class="col-sm-12  col-md-2 col-lg-3"><a href="">CONTACTO</a></li>
-                      </ul>
-        
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-                        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                </nav>
-            </div>
-        </div>
-    </header>
+    <%- include('partials/header') %> >
 
     <br>
 
@@ -179,22 +145,9 @@
         </div>
     </div>
     
-
-
-
-
-
-
-
     </div>
 
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/sweetalert2.min.js"></script>
-    <script src="js/carrito.js"></script>
-    <script src="js/compra.js"></script>
-    <script src="/javascripts/header.js"></script>
-    <script src="/javascripts/productCart.js"></script>
+<%- include('partials/footer') %> >
 </body>
 
 </html>
