--- a/equim/views/productDetail.ejs
+++ b/equim/views/productDetail.ejs
@@ -66,21 +66,21 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../Imagenes/Retrospetiva Estrella de Mar (1).jpg" class="d-block w-50" alt="..." height="50%">
+              <img src="images/lavandina-cuatro-litros.jpg" class="d-block w-50" alt="..." height="50%">
               <div class="carousel-caption d-none d-md-block">
                 <h5></h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="../Imagenes/Retrospectiva Estrella de Mar.jpg" class="d-block w-50" alt="..." height="50%">
+              <img src="images/lavandina-triple-4lts.jpg" class="d-block w-50" alt="..." height="50%">
               <div class="carousel-caption d-none d-md-block">
                 <h5></h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="../Imagenes/Retrospectiva Estrella de Mar.jpg" class="d-block w-50" alt="..." height="50%">
+              <img src="images/limpiador-antigrasa-5lts.jpg" class="d-block w-50" alt="..." height="50%">
               <div class="carousel-caption d-none d-md-block">
                 <h5></h5>
                 <p></p>
