subo archivo de vista de listado de producto con su ruta

--- a/equim/views/compra.ejs
+++ b/equim/views/compra.ejs
@@ -9,7 +9,7 @@
     <br>
 
     <main>
-        <div class="container">
+        <div class="container py-5">
             <div class="row mt-3">
                 <div class="col">
                     <h2 class="d-flex justify-content-center mb-3">Mi compra</h2>
@@ -146,7 +146,7 @@
     </div>
     
     </div>
-
+</section>
 <%- include('partials/footer') %> >
 </body>
 
