--- a/equim/views/productDetail.ejs
+++ b/equim/views/productDetail.ejs
@@ -20,13 +20,15 @@
     <!--imagen del producto-->
     <div class="row">
       <div class="col-12 col-md-8 col-lg-6">
-        <a href=""><img class="" src="../Imagenes/Retrospectiva Estrella de Mar.jpg" alt=""></a>
+        <a href=""><img src="images/<%- producto.imagen%>" width="100%" height="100%" alt=" " ></a>
       </div>
       <div class="col-12">
-        <p>NOMBRE DEL PRODUCTO</p>
+        <p>NOMBRE DEL PRODUCTO
+          <%= producto.name%>
+        </p>
       </div>
       <div class="col-12">
-        <p>$$$$$</p>
+        <p><%= producto.price%></p>
       </div>
     </div>
     <!--buttons-->
@@ -45,8 +47,9 @@
     <div class="row">
       <div class="col-12">
         <h3>Descripcion del Producto</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam, quaerat qui mollitia eligendi harum,
-          aliquam voluptate et dolorem dolore inventore cum. Beatae ipsum voluptas iure te</p>
+        <p>
+          <%= producto.description%>
+        </p>
       </div>
     </div>
     <!--titulo de productos relacionados-->
