--- a/equim/views/partials/header.ejs
+++ b/equim/views/partials/header.ejs
@@ -68,10 +68,10 @@
         <!--menu-->
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="menu navbar-nav mr-auto">
-              <li class="col-12 col-md-3"><a href="">PRODUCTOS PARA BAÑO</a></li>
-              <li class="col-12 col-md-3"><a href="">PRODUCTOS PARA COCINA</a></li>
-              <li class="col-12 col-md-3"><a href="">PRODUCTOS PARA PISO</a></li>
-              <li class="col-12 col-md-3"><a href="">PRODUCTOS VARIOS</a></li>
+              <li class="col-12 col-md-3"><a href="/products">PRODUCTOS PARA BAÑO</a></li>
+              <li class="col-12 col-md-3"><a href="/products">PRODUCTOS PARA COCINA</a></li>
+              <li class="col-12 col-md-3"><a href="/products">PRODUCTOS PARA PISO</a></li>
+              <li class="col-12 col-md-3"><a href="/products">PRODUCTOS VARIOS</a></li>
             </ul>
           </div>
       </nav>
