--- a/equim/views/productDetail.ejs
+++ b/equim/views/productDetail.ejs
@@ -20,7 +20,7 @@
     <!--imagen del producto-->
     <div class="row">
       <div class="col-12 col-md-8 col-lg-6">
-        <a href=""><img src="images/<%- producto.imagen%>" width="100%" height="100%" alt=" " ></a>
+        <a href=""><img src="/images/<%- producto.imagen%>" width="100%" height="100%" alt=" " ></a>
       </div>
       <div class="col-12">
         <p>NOMBRE DEL PRODUCTO
